相册和代码约束

--- a/FansArea/Info.plist
+++ b/FansArea/Info.plist
@@ -34,6 +34,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>需要访问摄像头来拍摄区域图片</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>需要访问相册来选择区域图片</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
