webView WKWebView SFSafariViewController 实现，SafariServices有点问题，显示返回后与WebViewController返回的segue冲突。表现为在SafariServices显示完返回时会先显示webViewController里的WKWebView，然后再退回AboutTableViewController。

--- a/FansArea/Info.plist
+++ b/FansArea/Info.plist
@@ -38,6 +38,11 @@
 	<string>需要访问摄像头来拍摄区域图片</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>需要访问相册来选择区域图片</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
